Revisione funzione getPosts

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -64,9 +64,8 @@
                 <div class="col-md-12">
                     <h4>Gli ultimi post dalla community</h4>
                 </div>
-
-
-
+            </div>
+            <div class="row" id="row-post">
                 <div class="col-md-3">
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="..." alt="Card image cap">
@@ -107,6 +106,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
 
             <hr>
@@ -127,6 +127,7 @@
         crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../node_modules/jquery/dist/jquery-slim.min.js"><\/script>')</script>
     <script src="../../node_modules/popper.js/dist/popper.min.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../js/index.js"></script>
 </body>
