--- a/source/html/dettaglio.html
+++ b/source/html/dettaglio.html
@@ -47,28 +47,21 @@
                 </ul>
             </div>
         </nav>
-
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="../../source/images/business-3190209_1920.jpg" alt="First slide">
-                </div>
-            </div>
-        </div>
     </header>
 
     <main role="main">
         <div class="container-fluid">
             <!-- Example row of columns -->
             <div class="row">
-                <div class="col-md-12">
-                    <h4>Visualizza i tuoi todos</h4>
+                <div class='col-md-3'>
+                    <div class="card text-white bg-light mb-3" style="max-width: 18rem;" id="todo-card">
+                        <div class="card-body">
+                            <h5 class="card-title" id="todo-title"></h5>
+                            <p class="card-text" id="todo-text"></p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row" id="row-post">
-                <!--contenuto generato dinamicamente -->
-            </div>
-            <hr>
         </div>
         <!-- /container -->
 
@@ -87,7 +80,7 @@
     <script src="../../node_modules/popper.js/dist/popper.min.js"></script>
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="../js/index.js"></script>
+    <script src="../js/dettaglio.js"></script>
 </body>
 
 </html>
