--- a/source/html/index.html
+++ b/source/html/index.html
@@ -28,11 +28,6 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">  <a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"> <a class="nav-link" href="#">About Us</a></li>
-                    <li class="nav-item"> <a class="nav-link" href="#">Contact Us</a></li>
-                </ul>
             </div>
         </nav>
 
@@ -66,11 +61,17 @@
         <p>&copy; Company 2017-2018</p>
         <div id="socialicon">
             <ul>
-       <li><i class="fab fa-facebook-f fa-2x"></i></li>
-       <li><i class="fab fa-instagram fa-2x"></i></li>
-       <li><i class="fab fa-twitter fa-2x"></i></li>
-    </ul>
-    </div>
+                <li>
+                    <i class="fab fa-facebook-f fa-2x"></i>
+                </li>
+                <li>
+                    <i class="fab fa-instagram fa-2x"></i>
+                </li>
+                <li>
+                    <i class="fab fa-twitter fa-2x"></i>
+                </li>
+            </ul>
+        </div>
     </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
