--- a/source/html/index.html
+++ b/source/html/index.html
@@ -81,18 +81,24 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <form>
+                        <form class="needs-validation" id="form-login" novalidate>
                             <div class="form-group">
                                 <label for="email-login">Email</label>
                                 <input type="email" class="form-control" id="email-login" aria-describedby="emailHelp" placeholder="Inserisci la tua mail" required>
+                                <div class="invalid-feedback">
+                                    Inserisci un'email valida
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label for="password-login">Password</label>
                                 <input type="password" class="form-control" id="password-login" placeholder="Inserisci la tua password" required> 
+                                <div class="invalid-feedback">
+                                    Inserisci la password
+                                </div>
                             </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary">Login</button>
+                        <button type="submit" class="btn btn-primary" id="btn-login">Login</button>
                         </form>
                     </div>
                 </div>
@@ -110,19 +116,25 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <form>
+                        <form class="needs-validation" id="form-signin" novalidate>
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci la tua email" required>
                                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                <div class="invalid-feedback">
+                                    Inserisci un'email valida
+                                </div>
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputPassword1">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" required>
+                                <label for="password-signin">Password</label>
+                                <input type="password" class="form-control" id="password-signin" placeholder="Password" required>
+                                <div class="invalid-feedback">
+                                    Inserisci la password
+                                </div>
                             </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary">Registrati</button>
+                        <button type="submit" class="btn btn-primary" id="btn-signin">Registrati</button>
                         </form>
                     </div>
                 </div>
