--- a/source/html/index.html
+++ b/source/html/index.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#modal-about">Chi siamo
+                        <a class="nav-link" href="#modal-about" data-toggle="modal">Chi siamo
                             <span class="sr-only"></span>
                         </a>
                     </li>
@@ -84,14 +84,15 @@
                         <form class="needs-validation" id="form-login" novalidate>
                             <div class="form-group">
                                 <label for="email-login">Email</label>
-                                <input type="email" class="form-control" id="email-login" aria-describedby="emailHelp" placeholder="Inserisci la tua mail" required>
+                                <input type="email" class="form-control" id="email-login" aria-describedby="emailHelp" placeholder="Inserisci la tua mail"
+                                    required>
                                 <div class="invalid-feedback">
                                     Inserisci un'email valida
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="password-login">Password</label>
-                                <input type="password" class="form-control" id="password-login" placeholder="Inserisci la tua password" required> 
+                                <input type="password" class="form-control" id="password-login" placeholder="Inserisci la tua password" required>
                                 <div class="invalid-feedback">
                                     Inserisci la password
                                 </div>
@@ -119,7 +120,8 @@
                         <form class="needs-validation" id="form-signin" novalidate>
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci la tua email" required>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci la tua email"
+                                    required>
                                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                                 <div class="invalid-feedback">
                                     Inserisci un'email valida
@@ -136,6 +138,27 @@
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary" id="btn-signin">Registrati</button>
                         </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal about-->
+        <div class="modal fade" id="modal-about" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        ...
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
                 </div>
             </div>
