--- a/source/html/index.html
+++ b/source/html/index.html
@@ -37,10 +37,10 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#modal-login" data-toggle="modal">Login</a>
+                        <a class="nav-link" id="nav-login" href="#modal-login" data-toggle="modal">Login</a>
                     </li>
                     <li class="navbar-item">
-                        <a class="nav-link" href="#modal-signin" data-toggle="modal">Registrati</a>
+                        <a class="nav-link" id="nav-signin" href="#modal-signin" data-toggle="modal">Registrati</a>
                     </li>
                 </ul>
             </div>
