--- a/source/html/index.html
+++ b/source/html/index.html
@@ -64,7 +64,18 @@
                 </div>
             </div>
             <div class="row" id="row-post">
-                <!--contenuto generato dinamicamente -->
+                <table class="table table-hover">
+                    <thead>
+                      <tr>
+                        <th scope="col">#id</th>
+                        <th scope="col">Todo</th>
+                        <th scope="col">Azioni</th>
+                      </tr>
+                    </thead>
+                    <tbody id="table-body-todos">
+                        
+                    </tbody>
+                  </table>
             </div>
             <hr>
         </div>
