--- a/source/html/dettaglio.html
+++ b/source/html/dettaglio.html
@@ -100,6 +100,7 @@
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../js/dettaglio.js"></script>
+    <script src="../js/services.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </body>
 
