Refinement su css

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -66,16 +66,16 @@
             <div class="row" id="row-post">
                 <table class="table table-hover">
                     <thead>
-                      <tr>
-                        <th scope="col">#id</th>
-                        <th scope="col">Todo</th>
-                        <th scope="col">Azioni</th>
-                      </tr>
+                        <tr>
+                            <th scope="col">#id</th>
+                            <th scope="col">Todo</th>
+                            <th scope="col">Azioni</th>
+                        </tr>
                     </thead>
                     <tbody id="table-body-todos">
-                        
+                        <!-- contenuto generato dinamicamente -->
                     </tbody>
-                  </table>
+                </table>
             </div>
             <hr>
         </div>
