--- a/source/html/index.html
+++ b/source/html/index.html
@@ -69,7 +69,7 @@
                         <tr>
                             <th scope="col">#id</th>
                             <th scope="col">Todo</th>
-                            <th scope="col">Azioni</th>
+                            <th scope="col" class="td-center-content">Azioni</th>
                         </tr>
                     </thead>
                     <tbody id="table-body-todos">
