--- a/source/html/index.html
+++ b/source/html/index.html
@@ -74,6 +74,20 @@
                     </thead>
                     <tbody id="table-body-todos">
                         <!-- contenuto generato dinamicamente -->
+
+                    </tbody>
+                    <tbody>
+                        <tr>
+                            <form>
+                                <td></td>
+                                <td>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" id="input-todo" placeholder="Titolo del nuovo todo">
+                                    </div>
+                                </td>
+                                <td class="td-center-content"><button type="submit" class="btn btn-light">Crea todo</button></td>
+                            </form>
+                        </tr>
                     </tbody>
                 </table>
             </div>
