Creazione di un todo attivata solo dopo login

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -60,7 +60,7 @@
             <!-- Example row of columns -->
             <div class="row">
                 <div class="col-md-12">
-                    <h4>Visualizza i tuoi todos</h4>
+                    <h4>Visualizza e crea i tuoi todo</h4>
                 </div>
             </div>
             <div class="row" id="row-post">
@@ -74,20 +74,6 @@
                     </thead>
                     <tbody id="table-body-todos">
                         <!-- contenuto generato dinamicamente -->
-
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <form>
-                                <td></td>
-                                <td>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="input-todo" placeholder="Titolo del nuovo todo">
-                                    </div>
-                                </td>
-                                <td class="td-center-content"><button type="submit" class="btn btn-light">Crea todo</button></td>
-                            </form>
-                        </tr>
                     </tbody>
                 </table>
             </div>
