--- a/source/html/dettaglio.html
+++ b/source/html/dettaglio.html
@@ -46,7 +46,7 @@
             </div>
         </nav>
     </header>
-
+    <div id="mainprincipale">
     <main role="main">
         <div class="container-fluid">
             <!-- Example row of columns -->
@@ -67,12 +67,13 @@
                     </div>
                 </div>
             </div>
-            <hr>
+            
         </div>
+    </div>
         <!-- /container -->
 
     </main>
-
+    <hr>
     <footer class="container">
         <p>&copy; Company 2017-2018</p>
         <div id="socialicon">
